# my-supremepowers

./: .gitignore  ARCH_COMPARISON.md  GEMINI.md  README.md  config.json  create.txt  docs-04-22-17.csv  docs.txt  gemini_CODE_INTERPRETATION.md  gemini_GEMINI_CLI_OVERVIEW.md  gemini_GIT_AI.md  gemini_LOGS.md  gemini_PERFORMANCE_METRICS.md  gemini_SYSTEM_OVERVIEW.md  gemini_TOOL_USAGE_GUIDELINES.md  gemini_XEO-DEO_UNIVERSAL_CONSTITUTION.md  gemini_XEO-DEO_UNIVERSAL_CONSTITUTION_BACKUP.md  gemini_cli_integration.md  gemini_cli_supremepower_readme.md  gemini_projects.json  go-forward.txt  my-powers2.txt  my-powerstxt.txt  qwen_AI_ASSISTANT_MODEL.md  qwen_AUTONOMOUS_AI_WORKFLOWS.md  qwen_CORE_AI_ABILITIES.md  qwen_CURSORS.md  qwen_DESIGN_PATTERNS_FOR_AI.md  qwen_ECOSYSTEM_ANALYSIS.md  qwen_EVALUATION_FRAMEWORK.md  qwen_IMPORT_MANIFEST.md  qwen_INTEGRATION_SUMMARY.md  qwen_INTERACTION_MODES.md  qwen_KNOWLEDGE_REPRESENTATION.md  qwen_Learning_Explanatory_Styles.md  qwen_Logic_Flows.md  qwen_Master_Recall_Index.md  qwen_PROJECT_SUMMARY.md  qwen_PROMPT_ENGINEERING_GUIDELINES.md  qwen_QWEN.md  (+18 more)
.githooks/: pre-commit
agents/: agent-creation-guidance.md  autotag_architect.toml  documentation-management.md  ecosystem_intelligence.toml  rule-definition.md  system-analysis.md
docs/: AGENTS.md  ANALYSIS_CORE_FRAMEWORK_CONFIG.md  ANALYSIS_GEMINI_AUTOTAG_ARCHITECT.md  ANALYSIS_POLICY_AUTO_SAVED.md  ANALYSIS_QWEN_AVATARARTS_ORGANIZER.md  ANALYSIS_QWEN_SP_SCRIPT.md  ARCH_COMPARISON.md  CHANGELOG.md  (+16 more)
products/cli-tool/: README.md  pyproject.toml
products/cli-tool/cli_app/: cli.py
(+277 files in other folders)
