[tool.poetry]
name = "customizable-cli-tool"
version = "0.1.0"
description = "A customizable command-line interface tool."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"